<resources>
    <string name="app_name">Recording and Reporting</string>
    <string name="annex_3a">ANNEX 3A</string>
    <string name="revised_national_tuberculosis_control_programme">REVISED NATIONAL TUBERCULOSIS CONTROL PROGRAMME</string>
    <string name="laboratory_form_for_sputum_examination">Laboratory Form for Sputum Examination</string>
    <string name="name_of_referring_health_facility">Name of Referring Health Facility:</string>
    <string name="date">Date:</string>
    <string name="name_of_patient">Name of Patient:</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="complete_address">Complete Address:</string>
    <string name="type_of_suspect_disease">Type of suspect/ disease:</string>
    <string name="pulmonary">Pulmonary</string>
    <string name="extra_pulmonary">Extra-Pulmonary</string>
    <string name="site">Site:</string>
    <string name="reason_for_examination">Reason for Examination:</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="repeat_examination_for_diagnosis">Repeat Examination for Diagnosis</string>
    <string name="follow_up_of_anti_tb_treatment">Follow-up of anti-TB treatment</string>
    <string name="patient_s_tb_no">Patient’s TB No</string>
    <string name="name_and_signature_of_referring_person_official">(Name and signature of referring person/ official)</string>
    <string name="if_sputum_sample_are_being_transported">If sputum sample are being transported:</string>
    <string name="specimen_identification_no">Specimen identification No.:</string>
    <string name="date_of_sputum_collection">Date of Sputum Collection</string>
    <string name="specimen_collector_s_name_and_signature">Specimen Collector\'s name and signature:</string>
    <string name="submit">Submit</string>
    <string name="annex_3b">ANNEX 3B</string>
    <string name="form_a">Form A</string>
    <string name="referral_for_treatment_form">Referral for treatment form</string>
    <string name="fill_in_triplicate_send_one_to_the_respective_dto_receiving_the_patient_form_a_send_one_copy_to_the_health_facility_where_the_patient_is_referred_to_form_b_and_give_one_copy_to_the_patient_form_c">(Fill in triplicate. send one to the respective DTO receiving the patient [Form A], send one copy to the health facility where the patient is referred to [Form B], and give one copy to the patient [Form C])</string>
    <string name="name_and_address_of_referring_health_facility">Name and address of referring health facility</string>
    <string name="name_of_health_facility_to_which_patient_is_referred">Name of health facility to which patient is referred</string>
    <string name="nameof_patient">Nameof Patient</string>
    <string name="disease_classification">Disease Classification</string>
    <string name="category_of_treatment">Category of Treatment</string>
    <string name="category1">Category1</string>
    <string name="category2">Category2</string>
    <string name="category3">Category3</string>
    <string name="type_of_patient">Type of Patient</string>
    <string name="_new">New</string>
    <string name="relapse">Relapse</string>
    <string name="failure">Failure</string>
    <string name="treatment_after_default">Treatment after default</string>
    <string name="other_specify">Other(specify)</string>
    <string name="remarks">Remarks</string>
    <string name="signature">Signature</string>
    <string name="date_referred">Date Referred</string>
    <string name="designation">Designation</string>
    <string name="_date">Date</string>
    <string name="_name_of_patient">Name of Patient</string>
    <string name="_age">age</string>
    <string name="_sex">sex</string>
    <string name="_m">m</string>
    <string name="_f">f</string>
    <string name="_complete_address">Complete Address</string>
    <string name="_pulmonary">Pulmonary</string>
    <string name="_extra_pulmonary">Extra-Pulmonary</string>
    <string name="_site">Site</string>
    <string name="_new_">New</string>
    <string name="_revised_national_tuberculosis_control_programme">REVISED NATIONAL TUBERCULOSIS CONTROL PROGRAMME</string>
</resources>
