<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/annex_3b">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annex_3b"
                android:gravity="end"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_a"
                android:gravity="left"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revised_national_tuberculosis_control_programme"
                android:textSize="30sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/referral_for_treatment_form"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fill_in_triplicate_send_one_to_the_respective_dto_receiving_the_patient_form_a_send_one_copy_to_the_health_facility_where_the_patient_is_referred_to_form_b_and_give_one_copy_to_the_patient_form_c"
                android:textSize="15sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_and_address_of_referring_health_facility"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/etNameRHF1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_health_facility_to_which_patient_is_referred"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/etNamewpr"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_date"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:id="@+id/etDate1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_name_of_patient"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:id="@+id/etNamePatient1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_age"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:id="@+id/etAge1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_sex"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_m"
                        android:textColor="@android:color/tab_indicator_text"
                        android:id="@+id/rbM1"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_f"
                        android:textColor="@android:color/tab_indicator_text"
                        android:id="@+id/rbF1"/>

                </RadioGroup>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_complete_address"
                android:textSize="17sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/complete_address1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disease_classification"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_pulmonary"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/Pul1"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_extra_pulmonary"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/Extra_pul1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_site"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/rbSite"/>

            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_of_treatment"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category1"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/cat1"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category2"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/cat2"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category3"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/cat3"/>

            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_of_patient"
                android:textSize="20sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_new_"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/New"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/relapse"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/Rel"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/failure"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/Fail"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/treatment_after_default"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/TaD"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other_specify"
                    android:textColor="@android:color/tab_indicator_text"
                    android:id="@+id/other"/>

            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarks"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signature"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:id="@+id/sign"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_referred"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:id="@+id/date_referred"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:id="@+id/Designation"/>

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="20sp"
                android:id="@+id/btnSubmit2"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
